# Assay

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
assay-output/: assay-20260415T100000Z-0b03d02e-2de6-4bcc-b81d-99dee6bc68a7.json  assay-20260415T100000Z-17325fb5-a4e3-419f-8a0b-e0b4eb0fb2db.json  assay-20260415T100000Z-af6c5578-a3ad-4362-8087-8eeebf6b78c3.json  assay-20260415T100000Z-b35319aa-dbef-40f7-ab14-1e9cefea22ab.json  assay-20260415T100000Z-e8535444-cdb5-4be8-915f-b4401d746ad2.json  assay-20260416T143725Z-deb48a79-bbf0-40f1-9bb0-11e94947217a.json  assay-20260418T100000Z-0628704e-071f-4077-91a4-52287e4b831b.json  assay-20260418T100000Z-08e39514-531e-4d4b-87fc-5cdbeae0bc76.json  assay-20260418T100000Z-12649b39-042a-4a87-89d9-d36ce5cdfaa5.json  assay-20260418T100000Z-18b0fccb-eb2e-460f-8bee-6ed7e957b7ef.json  assay-20260418T100000Z-18cdd649-d331-4774-ad67-79df86e07eef.json  assay-20260418T100000Z-23176bb3-e701-4001-9397-5e85febef47f.json  assay-20260418T100000Z-28389d1d-c598-4cfa-91f8-e2f6e6cb9606.json  assay-20260418T100000Z-2e44cec1-6043-412b-8a2a-173c162d3529.json  assay-20260418T100000Z-2e4ab9a2-716d-4be3-bb78-51a9a3a03cdd.json  assay-20260418T100000Z-2ffa930a-5d5a-4939-be80-60c2901ae99d.json  assay-20260418T100000Z-334c3dca-bc97-4593-a50a-77c9247b4ce9.json  assay-20260418T100000Z-446efa38-8005-43d1-a5b3-45564610aaa7.json  assay-20260418T100000Z-449fca45-cb4a-4aea-b997-9027a1bad294.json  assay-20260418T100000Z-47e3fa82-0aee-43e7-8c3e-2d9fa1cd01bd.json  assay-20260418T100000Z-4c6230f6-488c-4794-ba45-100ec3c6c90c.json  assay-20260418T100000Z-515f75eb-880a-45fe-bdb4-26c6bc871e77.json  assay-20260418T100000Z-57c6db5d-f65a-4da0-9e47-a939cd9a6288.json  assay-20260418T100000Z-5b402767-5c9c-4614-96a2-09ce3689eaa4.json  assay-20260418T100000Z-60dbd31b-c785-428e-8995-2758ebfca3c6.json  assay-20260418T100000Z-674715ea-824b-449c-bfa8-fce539bca43a.json  assay-20260418T100000Z-6a7d088e-63e3-4abe-aab9-d6ae20900653.json  assay-20260418T100000Z-71e69cc7-c917-4ae7-860e-5d2bf471c34f.json  assay-20260418T100000Z-72c9ebf5-f72e-435c-ace7-013ba15dba3a.json  assay-20260418T100000Z-74126595-8795-4a83-a4bc-66429d488862.json  assay-20260418T100000Z-77f9dcbf-b976-42af-a880-4f1d44e95e94.json  assay-20260418T100000Z-7db18b72-3ba3-4952-a3b6-2777d547065c.json  assay-20260418T100000Z-7e28267d-dc7f-4476-aad9-0040e8d073fa.json  assay-20260418T100000Z-7e28e894-1a24-46b5-a5f2-77f0a88554cc.json  assay-20260418T100000Z-7f106033-caf2-43ae-bbf1-6d909df057c2.json  assay-20260418T100000Z-80ef57e0-cc17-4023-ab31-862277d6548c.json  assay-20260418T100000Z-848e9bf7-af72-408c-961f-8bbf8d95bfad.json  assay-20260418T100000Z-871f01bc-d999-49bd-b281-c9bc02f4ee58.json  (+28 more)
(+282 files in other folders)
