[project]
name = "assay"
version = "0.1.0"
description = "Independent verification layer for software projects"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23",
]

[project.scripts]
assay = "assay.cli:app"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
packages = ["assay"]

[tool.pytest.ini_options]
testpaths = ["tests"]
